fix password hashing
Replace user.objects.create()
with user.objects.create_user()

add input text-center to verify_email.html

--- a/users/templates/verify_email.html
+++ b/users/templates/verify_email.html
@@ -13,7 +13,7 @@
           </div>
           <div class="col-12 mx-auto">
             <div class="container">
-              <input type="text" name="verify-code" class="form-control rounded-1 my-2 shadow-sm"
+              <input type="text" name="verify-code" class="form-control rounded-1 my-2 shadow-sm text-center"
                 placeholder="Please enter the code" pattern="\d{6}" id="verify-code" required>
             </div>
           </div>
