--- a/users/templates/verify_email.html
+++ b/users/templates/verify_email.html
@@ -9,26 +9,18 @@
         <form class="py-4 px-1 px-sm-5 d-grid mx-auto shadow-lg rounded-2" action="{{request.path}}" method="post">
           {% csrf_token %}
           <div class="col-9 mb-3 mx-auto text-center">
-            <p class="text-center">Please enter the code from your email</p>
+            <p class="text-center">Please enter the verification code from your email</p>
           </div>
           <div class="col-12 mx-auto">
             <div class="container">
               <input type="text" name="verify-code" class="form-control rounded-1 my-2 shadow-sm text-center"
-                placeholder="Please enter the code" pattern="\d{6}" id="verify-code" required>
+                placeholder="Please enter the code" pattern="\d{6}" id="verify-code" required
+                title="The verification code is 6 digits">
             </div>
           </div>
           <div class="d-grid gap-2 my-4 col-6 mx-auto">
             <button type="submit" class="btn btn-danger rounded-1">Verify</button>
           </div>
-          {% if messages %}
-          <ul class="list-group mx-auto">
-            {% for message in messages %}
-            <li{% if message.tags %}
-              class="list-group-item list-group-item-{% if message.tags == 'error' %}danger{% else %}{{ message.tags }}{% endif %}"
-              {% endif %}>{{ message }}</li>
-              {% endfor %}
-          </ul>
-          {% endif %}
         </form>
       </div>
 
