--- a/product/templates/category.html
+++ b/product/templates/category.html
@@ -9,7 +9,7 @@
 <div class="container product my-5">
   <div class="row">
     <div class="col-md-12 d-sm-flex flex-sm-wrap justify-content-center">
-      {% for prod in category %}
+      {% for prod in categories %}
       <div class="card shadow-lg col-12 mx-auto my-1 col-sm-8 col-md-5 m-sm-1 col-lg-4 col-xl-3">
         <div class="container-fluid p-0">
           <img src="{{ prod.image.url }}" class="card-img-top img-fluid" alt="{{ prod.title }}">
